--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Accueil";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Bienvenue sur l'application MovieApp</h1>
+
+<p>Choisissez une section :</p>
+
+<ul>
+    <li><a asp-controller="Customer" asp-action="Index">Voir les Customers</a></li>
+    <li><a asp-controller="Customer" asp-action="Create">Ajouter un Customer</a></li>
+    <li><a asp-controller="Movie" asp-action="Index">Voir les Films</a></li>
+    <li><a asp-controller="Movie" asp-action="Create">Ajouter un Film</a></li>
+    <li><a asp-controller="Genre" asp-action="Index">Voir les Genres</a></li>
+</ul>
